--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 lang: en-US
 
 # Site title
-title: "Scriptor"
+title: "Infinity Loop"
 
 # A description of your site for meta tag, search engine results.
-description: "Scriptor is a minimal, clean, modern & responsive Jekyll theme for writers"
+description: "Journey of dev. life"
 
 # The subpath of your site, e.g. /blog, for generating urls.
 baseurl: "/"
