--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title: "Infinity Loop"
 description: "Journey of dev. life"
 
 # The subpath of your site, e.g. /blog, for generating urls.
-baseurl: "/"
+baseurl: "infinity-loop"
 
 # The base hostname & protocol of your site for where absolute urls are needed.
 url: "https://wowpeter.github.io/infinity-loop"
