--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ lang: en-US
 title: "Infinity Loop"
 
 # A description of your site for meta tag, search engine results.
-description: "Journey of dev. life"
+description: "Journey of dev. life\n끝나지 않는 개발자의 삶의 발자국"
 
 # The subpath of your site, e.g. /blog, for generating urls.
 baseurl: "infinity-loop"
