--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ lang: en-US
 title: "Infinity Loop"
 
 # A description of your site for meta tag, search engine results.
-description: "Journey of dev. life\n끝나지 않는 개발자의 삶의 발자국"
+description: "언어, 코딩, 개발, 그리고 개발자의 삶"
 
 # The subpath of your site, e.g. /blog, for generating urls.
-baseurl: "infinity-loop"
+baseurl: "/infinity-loop"
 
 # The base hostname & protocol of your site for where absolute urls are needed.
 url: "https://wowpeter.github.io/infinity-loop"
