--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title: "Infinity Loop"
 description: "언어, 코딩, 개발, 그리고 개발자의 삶"
 
 # The subpath of your site, e.g. /blog, for generating urls.
-baseurl: "/infinity-loop"
+baseurl: "https://wowpeter.github.io/infinity-loop"
 
 # The base hostname & protocol of your site for where absolute urls are needed.
 url: "https://wowpeter.github.io/infinity-loop"
@@ -36,8 +36,8 @@ navigation:
     url: /style-guide/
   - text: Tags
     url: /tags/
-  - text: Download
-    url: https://github.com/JustGoodThemes/Scriptor-Jekyll-Theme
+  # - text: Download
+  #   url: https://github.com/JustGoodThemes/Scriptor-Jekyll-Theme
 
 # The shortname for your Disqus site to enable comments.
 disqus: justgoodthemes
@@ -47,7 +47,7 @@ accent_color: '#2d72d9'
 
 # Site footer
 footer:
-  content: "&copy; Scriptor all rights reserved. Theme by [JustGoodThemes](https://www.justgoodthemes.com)."
+  content: "&copy; Infinity Loop all rights reserved. Theme by [JustGoodThemes](https://www.justgoodthemes.com)."
   has_social: true
 
 # Plugins
