--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: "언어, 코딩, 개발, 그리고 개발자의 삶"
 baseurl: "/infinity-loop"
 
 # The base hostname & protocol of your site for where absolute urls are needed.
-url: "https://wowpeter.github.io/infinity-loop"
+url: "https://wowpeter.github.io"
 
 # Favicon
 favicon: images/favicon.png
