--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url: "https://wowpeter.github.io"
 favicon: images/favicon.png
 
 # Google Analytics id, e.g. "UA-NNNNNNNN-N"
-google_analytics: ""
+google_analytics: "G-J1XL5ED4Z3"
 
 # Site navigation - each item must have a title and a url.
 navigation:
